--- a/DrawNet/index.html
+++ b/DrawNet/index.html
@@ -66,7 +66,7 @@
                   </h2>
                   <p class="lead text-white mt-3 lh-180 c-white animated" data-animation-in="fadeInUp"
                     data-animation-delay="2500">
-                    Fachao Zhang <span><sup>a</sup></span>, Xiaoman Liang<sup>a,b,*</sup>, Yuan Qin<sup>a</sup>,Huihuang Zhao<sup>a,b</sup>
+                    Fachao Zhang <span><sup>a</sup></span>, Xiaoman Liang<sup>a,b,*</sup>, Yuan Qin<sup>a</sup>,Yue Chen<sup>a</sup>,Huihuang Zhao<sup>a,b</sup>
                   </p>
 
                   <p class="lead text-white mt-3 lh-180 c-white animated" data-animation-in="fadeInUp"
